--- a/jacktrip/TODO.txt
+++ b/jacktrip/TODO.txt
@@ -1,3 +1,15 @@
+- add the option for 24 bit audio
+- remove comments and cleanup code
+- add a verbose mode, with more diagnostics (silent by default)
+  Check how to do this with a flag in cerr
+- check if multithread is working correctly
+- sourceforge
+- Distribute without the FAUST dependency
+- Always remove the debug mode for release
+- remove at some point the  qt3support
+- remove the lasound dependency
+- Replace all types by qt types, to make it more robost to multiprocessors.
+
 -Check That the Ethernet is running in full duplex
        /sbin/ethtool gives that info, but you have to be root for that
        looking for other options...
@@ -5,8 +17,4 @@
        dmesg |grep eth0
        gives the info
 
-Check the FIFO Prioriy, now it is at 51, was at 99
-=======
-
-Add flag to name the client with more meaningfull names than go_1, etc..
-
+-Check the FIFO Prioriy, now it is at 51, was at 99
