--- a/paultrip/TODO.txt
+++ b/paultrip/TODO.txt
@@ -1,6 +1,6 @@
 High Priority TODOS:
 
-- ProcessPlugins working, need to set the faust compiler to generate approprate classes
+- ProcessPlugins working, need to set the faust compiler to generate approprate classes. Also, add the offset option to process starting from a different channel
 - add and read header
 - fix ring buffer (add resets) and decide about the queue lengths
 - add bit rate multipliers
