--- a/trunk/paultrip/TODO.txt
+++ b/trunk/paultrip/TODO.txt
@@ -5,3 +5,6 @@ High Priority TODOS:
 - add queue lengths (settings of ring buffer)
 - add bit rate multipliers
 - Propertely implement the PaulTrip class, now it is too protorypee
+
+- Verify RingBuffer, when in a mac the connection is done when something is already sending packets, the delay is much smaller that the case when the peer connect later.
+Also, there's a buzz when there's no connection that shouldn't happen, is should just send zeros.
