--- a/paultrip/TODO.txt
+++ b/paultrip/TODO.txt
@@ -7,6 +7,8 @@ High Priority TODOS:
 - Propertely implement the PaulTrip class, now it is too protorypee
 
 - Verify RingBuffer, when in a mac the connection is done when something is already sending packets, the delay is much smaller that the case when the peer connect later.
+
 Also, there's a buzz when there's no connection that shouldn't happen, is should just send zeros.
 
-- 
+- Verify why loopback is just duplicating one channel instead of using stereo.
+
