--- a/trunk/jacktrip/TODO.txt
+++ b/trunk/jacktrip/TODO.txt
@@ -10,3 +10,6 @@ High Priority TODOS:
 TODOS: Add header into packet, and add redundancy to UDP
 - Loopback is not working the way it is implements in JackAudioInterface
  need to fix this maybe using an internal client
+
+
+- TEST SOURCEFORGE
