--- a/jacktrip/TODO.txt
+++ b/jacktrip/TODO.txt
@@ -1,13 +1,19 @@
 High Priority TODOS:
+--------------------
 
-- ProcessPlugins working, need to set the faust compiler to generate approprate classes. Also, add the offset option to process starting from a different channel
-- add and read header
-- add queue lengths (settings of ring buffer)
-- Propertely implement the PaulTrip class, now it is too protorypee
+- Add redundancy to UDP
+- Finish header implementation, add run-time check
 
-- Verify why loopback is just duplicating one channel instead of using stereo.
 
-TODOS: Add header into packet, and add redundancy to UDP
-- Loopback is not working the way it is implements in JackAudioInterface
- need to fix this maybe using an internal client
+Plug-ins:
+---------
+- Extend Plugin structure to include more than 1 plug-in and add the mode for local effect (not loopback)
+- add the offset option to process starting from a different channel
+- Set the faust compiler to automatically generate plugins
 
+
+Protocol:
+---------
+- Add TCP clacc
+- Add SCTP class
+- Maybe add a layer of OSC communication for control messages
