--- a/trunk/jacktrip/TODO.txt
+++ b/trunk/jacktrip/TODO.txt
@@ -10,7 +10,7 @@ Plug-ins:
 - Extend Plugin structure to include more than 1 plug-in and add the mode for local effect (not loopback)
 - add the offset option to process starting from a different channel
 - Set the faust compiler to automatically generate plugins
-
+- Add low latency compression www.celt-codec.org
 
 Protocol:
 ---------
