--- a/jacktrip/INSTALL.txt
+++ b/jacktrip/INSTALL.txt
@@ -29,23 +29,24 @@ If you are using yum (in Fedora 8 or later) you can just install them (as root) 
 
 If you want to build on MacOS X, you need JackOSX
 http://www.jackosx.com/
-and Qt 4.3 or higher. 
+and Qt 4.5 or higher. 
 http://trolltech.com/products/qt/
 
 
 ---
 Build:
 
-to build on Linux, just go to the /src directory and type the following two commands:
+If you're on Mac OS X or Fedora Linux and have all the dependencies installed,
+you can build by simply going to the /src directory and typing the following:
+    ./build
 
-   ./m.linux
-   make
 
+If the previous script doesn't work on a different Linux flavor, try building
+the Makfiles yourself. You'd need qmake (e.g., on Fedora, this command is called
+qmake-qt4). Then you can build by:
+    qmake jacktrip.pro
+    make release
 
-to build on MacOS X, just go to the /src directory and type the following two commands:
-
-   ./m.osx
-   make
 
 If you want to install install (using Terminal): on the /src directory type:
 
