--- a/trunk/jacktrip/INSTALL.txt
+++ b/trunk/jacktrip/INSTALL.txt
@@ -63,6 +63,45 @@ If you want to install install (using Terminal): on the /src directory type:
    sudo chmod 755 /usr/bin/jacktrip
    (now you can run jacktrip from any directory using Terminal)
 
+-----------------------------
+WINDOWS (XP and later) 
+
+Dependencies:
+
+- ASIO4all audio driver is required even with Audio interfaces that support ASIO: www.asio4all.com
+
+Installation:
+
+Simply Run the setup file Jacktrip-1.1.exe, which will unpack Jacktrip in the directory of your choice,
+the default is Program Files/Jacktrip.
+
+The installer also adds the executable Jacktrip.exe in the System32 directory, so that it can be executed
+from a command prompt from any working directory.
+
+This executable (jacktrip.exe) can be found in the bin directory, along with the Dynamic 
+Link Libraries (DLLs) it links to.
+
+
+Building:
+
+The easiest way to build is to download the free Qt Creator IDE from http://qt.nokia.com/products/ 
+
+Make a copy of the src and externals directories into a new directory of your choice, open the jacktrip.pro 
+file in src, and build the project.
+
+You can alternatively download the MinGW (Minimalist GNU for Windows), a Windows port of the GNU
+compiler from http://www.mingw.org/ and use mingw32-make from a command terminal to build the makefile.
+
+Building is not supported with Microsoft Visual Studio Compilers.
+
+Note: compiling with modifications in the .pro file (like adding a new source or header file) requires 
+qmake which is only available in the Qt Creator package.
+
+---
+
+BUILD WARNING 
+
+Always keep the /src and /externals directories under the same directory.
 
 ---
 Post Configuration
