--- a/jacktrip/INSTALL.txt
+++ b/jacktrip/INSTALL.txt
@@ -5,7 +5,7 @@ JackTrip: A System for High-Quality Audio Network Performance over the Internet.
 ---
 MacOS X (10.9 or higher) installation:
 
-If you are installing on MacOS X, a binary is provided.  You just need to have JackOSX installed on your machine
+If you are installing on MacOS X, a binary is provided with each release (download the latest release from https://github.com/jcacerec/jacktrip/releases before proceeding). You just need to have JackOSX installed on your machine
 http://www.jackosx.com/
 
 To install (using Terminal):
