--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -10,7 +10,7 @@ http://www.jackosx.com/
 
 To install (using Terminal):
 
-$ git clone https://github.com/jcacerec/jacktrip.git
+$ git clone https://github.com/jacktrip/jacktrip.git
 $ cd jacktrip/jacktrip/src
 $ sudo cp jacktrip /usr/local/bin/
   (enter your password when prompted)
@@ -119,18 +119,19 @@ Link Libraries (DLLs) it links to.
 
 Building:
 
-The easiest way to build is to download the free Qt Creator IDE from http://qt.nokia.com/products/
+The easiest way to build is to download the free Qt Creator IDE from https://www.qt.io/download since the jacktrip buildscript is written in qmake.
 
-Make a copy of the src and externals directories into a new directory of your choice, open the jacktrip.pro
-file in src, and build the project.
+Use `git clone https://github.com/jacktrip/jacktrip.git` to download a fresh copy of the repo.
+Open the `src/jacktrip.pro` and configure the project.
 
-You can alternatively download the MinGW (Minimalist GNU for Windows), a Windows port of the GNU
-compiler from http://www.mingw.org/ and use mingw32-make from a command terminal to build the makefile.
+Make sure to select the MinGW compiler (for example the one shipped with QtCreator).
+Building with Clang or Microsoft Visual Studio Compilers is currently not supported!
 
-Building is not supported with Microsoft Visual Studio Compilers.
+Download Jack2 from https://jackaudio.org/downloads/
+Make sure to install Jack into `C:\Program Files (x86)\Jack` (as this is the path where the jacktrip build script will look for it).
 
-Note: compiling with modifications in the .pro file (like adding a new source or header file) requires
-qmake which is only available in the Qt Creator package.
+Hit build in QtCreator.
+
 
 ---
 
