--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,36 +1,41 @@
-Jacktrip : Build Instructions for Linux and MacOS X
+Jacktrip : Build Instructions
 
 JackTrip: A System for High-Quality Audio Network Performance over the Internet.
 
 ---
-MacOS X (10.9 or higher) installation:
+Dependencies:
 
-If you are installing on MacOS X, a binary is provided with each release (download the latest release from https://github.com/jacktrip/jacktrip/releases before proceeding).
-You need to have a working jack installation on your machine (see below).
+If you're on Fedora, Debian, or Ubuntu, go to the detailed dependency instructions below.
 
-To install (using Terminal):
+On other Linux distributions, make sure you have the following libraries:
+the latest Qt
+jack-audio-connection-kit-devel
 
-$ git clone https://github.com/jacktrip/jacktrip.git
-$ cd jacktrip/src
-$ sudo cp jacktrip /usr/local/bin/
-  (enter your password when prompted)
+If you are using yum you can just install them (as root) with:
+   yum install jack-audio-connection-kit-devel
+and install qt from the qt site.
 
-$ sudo chmod 755 /usr/local/bin/jacktrip
-  (now you can run jacktrip from any directory using Terminal)
+If you want to build on MacOS X, you need Jack2:
+https://jackaudio.org/downloads/,
+the latest Qt, and possibly other dependencies in the detailed instructions.
 
+It is also possible to build without jack, see below.
 
+Detailed instructions for OSX dependencies (skip the steps you don't need):
+If this command returns the XCode version, you have it installed:
+xcodebuild -version
+If you don't have XCode, go to the AppStore to download and install it.
+If this command returns the version number of the package manager Homebrew, you have it installed:
+brew -v
+If you don't have Homebrew, install it:
+/bin/bash -c "$(curl -fsSLhttps://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+To install git if you don't have it:
+brew install git
+Install and link qt5:
+brew install qt5
+brew link qt5 --force
 
-To build using QtCreator (tested using QtCreator 4.11 and macOS 10.13.6):
-
-  * Open jacktrip.pro using QtCreator
-  * Choose a correctly configured Kit
-  * Install Jack:
-    brew install jack
-    brew install qjackctl
-
-
----
-Fedora installation (also tested on Ubuntu Studio):
+Fedora dependencies (also tested on Ubuntu Studio):
 
 To install on Fedora (and possibly other Linux distributions), you need qt5, jack-audio-connection-kit-devel, and rtaudio.
 
@@ -44,54 +49,24 @@ Ubuntu Studio already comes with jack and qjackctl but you may have to install l
 
 sudo apt install build-essential
 
+Ubuntu and Debian dependencies
 
-For rtaudio, if you don’t have the latest package, install from source:
-
-$ git clone https://github.com/thestk/rtaudio
-$ cd rtaudio
-$ bash autogen.sh
-$ ./configure --with-jack
-$ make
-$ sudo make install
-$ sudo ln -s /usr/local/lib/librtaudio.so.6 /lib64/
-
-Then to install jacktrip:
-
-$ git clone https://github.com/jacktrip/jacktrip.git
-$ cd jacktrip/src
-$ ./build
-$ sudo make install
-
-
----
-Dependencies:
-
-You need to have installed the libraries in your system:
-Qt 5.3 or higher
-jack-audio-connection-kit-devel
-rtaudio
-
-If you are using yum you can just install them (as root) with:
-   yum install jack-audio-connection-kit-devel
-and install qt from the qt site.
-
-If you want to build on MacOS X, you need JackOSX
-http://www.jackosx.com/
-and Qt 5.3 or higher.
-
-It is also possible to build without jack, see below.
-
+apt install -y --no-install-recommends gcc g++ librtaudio-dev qt5-default autoconf automake libtool make libjack-jackd2-dev qjackctl audacity git
 
 ---
 Build:
 
-If you're on Mac OS X or Fedora Linux and have all the dependencies installed,
-you can build by simply going to the /src directory and typing the following:
-    ./build
+If you're on Mac OS X or Fedora Linux and have all the dependencies installed, clone the repo in the Terminal:
+$ git clone https://github.com/jacktrip/jacktrip.git
+$ cd jacktrip/src
+You can build in the /src directory by typing the following:
+$ ./build
+
+The build script generates an executable in the builddir folder at the same level as /src.
 
 If you want to build without Jack support (meaning that you won't need jack installed
 to use the app) type the following:
-   ./build nojack
+$ ./build nojack
 
 If the previous script doesn't work on a different Linux flavor, try building
 the Makefiles yourself. You'd need qmake. Then you can build by:
@@ -102,38 +77,72 @@ Or without Jack support:
 $ qmake -config nojack jacktrip.pro
 $ make release
 
+To build using QtCreator (tested using QtCreator 4.11 and macOS 10.13.6):
 
-If you want to install (using Terminal): on the /builddir directory type:
+  * Open jacktrip.pro using QtCreator
+  * Choose a correctly configured Kit
+  * Install Jack:
+    brew install jack
+    brew install qjackctl
 
+---
+Installation on MacOS X (10.9 or higher) or Linux:
+
+You need to have a working jack installation on your machine (see Dependencies above).
+
+To install using Terminal (skip the first three steps if you've already followed the Build instructions above):
+
+$ git clone https://github.com/jacktrip/jacktrip.git
+$ cd jacktrip/src
+$ ./build
+$ cd ../builddir
 $ sudo cp jacktrip /usr/local/bin/
   (enter your password when prompted)
 
 $ sudo chmod 755 /usr/local/bin/jacktrip
   (now you can run jacktrip from any directory using Terminal)
 
+To access the graphic installer for MacOS X: https://ccrma.stanford.edu/software/jacktrip/osx/index.html
+If you encounter a message blocking you from opening the installer, open System Preferences >> Security & Privacy.  In the General tab, there may be a message about the application not being from an identified developer.  Click "Open Anyway", then "Open" again if there's a further prompt.
+
+---
+Installation Verification on MacOS X or Linux:
+If you have installed jacktrip, from anywhere in the Terminal, type:
+$ jacktrip -v
+
+If you have compiled from source without installing, in the /builddir directory type:
+$ ./jacktrip -v
+
+If you see something like this, you have successfully installed Jacktrip:
+JackTrip VERSION: 1.xx
+Copyright (c) 2008-2020 Juan-Pablo Caceres, Chris Chafe.
+SoundWIRE group at CCRMA, Stanford University
+
+Follow the link at the bottom of the page to use Jacktrip.
 
 ---
 WINDOWS (XP and later)
 
 Dependencies:
 
-- ASIO4all audio driver is required even with Audio interfaces that support ASIO: www.asio4all.com
+- ASIO4all audio driver is required even with Audio interfaces that support ASIO: www.asio4all.com.
+- Note: Some users have reported success using the PortAudio driver, though it is not currently supported.
 
 Installation:
 
-Simply Run the setup file Jacktrip-1.1.exe, which will unpack Jacktrip in the directory of your choice,
-the default is Program Files/Jacktrip.
+To download the latest executable for Jacktrip on Windows: https://ccrma.stanford.edu/software/jacktrip/windows/index.html
 
-The installer also adds the executable Jacktrip.exe in the System32 directory, so that it can be executed
-from a command prompt from any working directory.
+If you have a copy of the executabe, you may leave it in the `Downloads` directory, or copy it to another folder.  You may have to click "Keep" a few times to tell Windows it's safe to download the file.  If the download succeeds, you'll see a file named `jacktrip.exe`.  Otherwise, you may see partially downloaded files with extensions such as `.crdownload` or `.download` or `.part`, depending on the browser you used.
 
-This executable (jacktrip.exe) can be found in the bin directory, along with the Dynamic
-Link Libraries (DLLs) it links to.
+If you have the installer, simply run the file jacktripInstaller.exe, which will unpack Jacktrip in the directory of your choice.
+The default is `Users/Your User Name/jacktrip1.2IsHere`.
 
+See instructions below for verifying the installation and running Jacktrip.
 
 Building:
 
 The easiest way to build is to download the free Qt Creator IDE from https://www.qt.io/download since the jacktrip buildscript is written in qmake.
+If you do not have Git installed, download it from https://git-scm.com/download/win.
 
 Use `git clone https://github.com/jacktrip/jacktrip.git` to download a fresh copy of the repo.
 Open the `src/jacktrip.pro` and configure the project.
@@ -141,28 +150,36 @@ Open the `src/jacktrip.pro` and configure the project.
 Make sure to select the MinGW compiler (for example the one shipped with QtCreator).
 Building with Clang or Microsoft Visual Studio Compilers is currently not supported!
 
-
 Download Jack2 from https://jackaudio.org/downloads/
 Make sure to install Jack into `C:\Program Files (x86)\Jack` (as this is the path where the jacktrip build script will look for it).
 
 Hit build in QtCreator.
+Copy the dll files `Qt5Core.dll` and `Qt5Network.dll` from your compiler's bin directory, e.g. `C:\Qt\5.15.0\mingw81_64\bin` to the folder in your project where your `jacktrip.exe` is located, e.g. `C:\Users\Your Name\jacktrip\build-jacktrip-Desktop-Qt_5_15_0_MinGW_64_bit-Release\release`
+In the above example, 5.15.0 is the version of Qt MinGW 64 bit is the compiler.  The folder names may vary according to the Qt and compiler versions you are using.
 
 Note: compiling with modifications in the .pro file (like adding a new source or header file) requires
 qmake which is only available in the Qt Creator package.
 
+Installation Verification:
+In the search field (Windows key + R), enter cmd.exe to open the command line.  Use the 'cd' command to navigate to the directory where the executable jacktrip.exe is located.
+
+For instance, if you downloaded a standalone executable and kept it in the default location:
+cd \Users\Your Name\Downloads
+
+Or if you used the 1.2 installer and chose the default location:
+cd \Users\Your Name\jacktrip1.2IsHere
+
+From here, the following command should return the version of Jacktrip you installed:
+jacktrip.exe -v
+
+If you see something like this, you have successfully installed Jacktrip:
+JackTrip VERSION: 1.xx
+Copyright (c) 2008-2020 Juan-Pablo Caceres, Chris Chafe.
+SoundWIRE group at CCRMA, Stanford University
+
+Follow the link below to use Jacktrip.
+
 ---
-
-BUILD WARNING
-
-Always keep the /src and /externals directories under the same directory.
-
----
-Post Configuration
+Post Configuration & Using Jacktrip:
 Detailed instructions at
-http://ccrma.stanford.edu/groups/soundwire/software/jacktrip/
-
-
----
-Using JackTrip
-Detailed instructions at
-http://ccrma.stanford.edu/groups/soundwire/software/jacktrip/
+https://ccrma.stanford.edu/docs/common/IETF.html
