--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -3,6 +3,12 @@ Jacktrip : Build Instructions
 JackTrip: A System for High-Quality Audio Network Performance over the Internet.
 
 The following are instructions for compiling Jacktrip from source.  Compiling from source is the best way to keep up with the latest changes, both stable and experimental.  For quicker ways to install Jacktrip, go to README.md in the root directory of the project.
+
+Steps:
+Dependencies
+Build
+Installation (Linux and OS X only)
+Installation or Build Verification
 ---
 Dependencies(for all operating systems):
 Qt 5.14.2
