updated Windows 10 build instructions

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -11,6 +11,7 @@ Installation (Linux and OS X only)
 Installation or Build Verification
 ---
 Dependencies(for all operating systems):
+g++
 Qt 5.14.2
 Jack
 Note: rtaudio is no longer a dependency
@@ -25,7 +26,7 @@ dnf install jack-audio-connection-kit-devel alsa-lib-devel iperf qjackctl audaci
 Clone the git repo and run ./build in the src directory or use QtCreator to compile
 
 Ubuntu and Debian/Raspbian:
-apt install -y --no-install-recommends gcc g++ librtaudio-dev qt5-default autoconf automake libtool make libjack-jackd2-dev qjackctl audacity git
+apt install -y --no-install-recommends build-essential librtaudio-dev qt5-default autoconf automake libtool make libjack-jackd2-dev qjackctl audacity git
 Clone the git repo and run ./build in the src directory or use QtCreator to compile
 
 Other Linux distributions:
@@ -114,20 +115,29 @@ Follow the link at the bottom of the page to use Jacktrip.
 
 ---
 WINDOWS (XP and later)
-
-Dependencies:
-
 - ASIO4all audio driver is required even with Audio interfaces that support ASIO: www.asio4all.com.
 - Note: Some users have reported success using the PortAudio driver, though it is not currently supported.
 
-Building:
-
-The easiest way to build is to download the free Qt Creator IDE from https://www.qt.io/download since the jacktrip buildscript is written in qmake.
+Building
+Note: WIN10BUILDINSTRUCTIONS.pdf (in the same directory as this file) has screenshots of the Windows 10 build process and step-by-step instructions.
 If you do not have Git installed, download it from https://git-scm.com/download/win.
-
+Open the command line by typing cmd.exe in the Windows search bar.
+Use the `cd` command to navigate to the directory where you would like to install jacktrip, e.g. `cd C:\Users\Your User Name\`.
 Use `git clone https://github.com/jacktrip/jacktrip.git` to download a fresh copy of the repo or `git pull` to update your repo.
-Open the `src/jacktrip.pro` and configure the project.
 
+On Windows 10, the easiest way to build is in the command line:
+To add the location of qmake to the path, in the Windows search bar, type "environment variable" and click on the Environment Variables button in the Advanced tab of System Properties.  Find the Path variable in System variables, click Edit, and enter the location of qmake, e.g. `C:\Qt\5.15.0\mingw81_64\bin`, where 5.15.0 is the version of Qt you installed.
+To verify you have g++ installed, type `which g++` in the command line.  If the command returns `not found` rather than a path, go to the Qt Maintenance Tool, which might be in a directory such as `C:\Qt\maintenancetool.exe`, and remove, then reinstall Qt.
+In the command line, use the `cd` command to navigate to the project directory, e.g. `cd jacktrip` and execute the following commands:
+mkdir builddir (this step creates the build directory, and is only necessary if you're building for the first time)
+cd builddir
+qmake -spec win32-g++ ../src/jacktrip.pro (you may skip this step if you're building for the first time)
+mingw32-make clean (you may skip this step if you're building for the first time)
+qmake -spec win32-g++ ../src/jacktrip.pro
+mingw32-make release
+
+On earlier Windows versions, the easiest way to build is to download the free Qt Creator IDE from https://www.qt.io/download since the jacktrip buildscript is written in qmake.
+Open the `src/jacktrip.pro` and configure the project.
 Make sure to select the MinGW compiler (for example the one shipped with QtCreator).
 Building with Clang or Microsoft Visual Studio Compilers is currently not supported!
 
@@ -142,7 +152,7 @@ Note: compiling with modifications in the .pro file (like adding a new source or
 qmake which is only available in the Qt Creator package.
 
 Build Verification:
-In the search field (Windows key + R), enter cmd.exe to open the command line.  Use the 'cd' command to navigate to the directory where the executable jacktrip.exe is located, e.g. `C:\Users\Your Name\jacktrip\build-jacktrip-Desktop-Qt_5_15_0_MinGW_64_bit-Release\release`.
+In the search field (Windows key + R), enter cmd.exe to open the command line.  Use the `cd` command to navigate to the directory where the executable jacktrip.exe is located, e.g. `C:\Users\Your Name\jacktrip\build-jacktrip-Desktop-Qt_5_15_0_MinGW_64_bit-Release\release`.
 
 From there, the following command should return the version of Jacktrip you installed:
 jacktrip.exe -v
